--- a/dongguanting.github.io-master/index.html
+++ b/dongguanting.github.io-master/index.html
@@ -168,7 +168,7 @@
 </div>
 
 <h2>Preprints</h2>
-<div class="publications">
+<div class="preprints">
 <ul>
     <li>
         <p>ET-Agent: Incentivizing Effective Tool-Integrated Reasoning Agent via Behavior Calibration<br />
