--- a/dongguanting.github.io-master/index.html
+++ b/dongguanting.github.io-master/index.html
@@ -68,8 +68,8 @@
             <!-- <a href="https://www.semanticscholar.org/author/Guanting-Dong/51490462?sort=influence">[Semantic Scholar]</a>  -->
             <!-- <a href="https://dblp.org/pid/227/7667.html">[DBLP]</a>  -->
 	    <!-- <a href="https://twitter.com/kakakbibibi">[Twitter]</a>  -->
-            <a href="https://www.zhihu.com/people/luo-hua-fei-liu">[知乎]</a> 
-            <a href="https://www.xiaohongshu.com/user/profile/62f8704a000000001f015bf0">[小红书]</a>
+            <a href="https://www.zhihu.com/people/luo-hua-fei-liu">[zhihu]</a> 
+            <a href="https://www.xiaohongshu.com/user/profile/62f8704a000000001f015bf0">[xiaohongshu]</a>
 
         </p>
     </td>
