--- a/dongguanting.github.io-master/index.html
+++ b/dongguanting.github.io-master/index.html
@@ -74,7 +74,7 @@
         </p>
     </td>
 
-    <td><img src="./files/yamada.jpg" border="0" width="120"></td>
+    <td><img src="./files/yamada.png" border="0" width="120"></td>
 </tr></tbody></table>
 
 
